[gd_scene load_steps=37 format=3 uid="uid://e0lmnsgvoln4"]

[ext_resource type="Script" uid="uid://d37uuganaastb" path="res://scripts/mario.gd" id="1_wrvex"]
[ext_resource type="Texture2D" uid="uid://bmjw3of2usx6q" path="res://characters/mario/animations1.png" id="2_4ckko"]
[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="2_4gsdp"]
[ext_resource type="AudioStream" uid="uid://dhyoxx8n1odk4" path="res://audio/sfx-jumpsmall.mp3" id="5_5ayx0"]
[ext_resource type="AudioStream" uid="uid://cb2m8ddbq1dg3" path="res://audio/sfx-jump.ogg" id="5_752v2"]
[ext_resource type="AudioStream" uid="uid://cjib07cmripbc" path="res://audio/music/death.mp3" id="7_7m202"]
[ext_resource type="AudioStream" uid="uid://cg4ejvh32kvcg" path="res://audio/sfx-powerup.ogg" id="8_gt6pp"]
[ext_resource type="AudioStream" uid="uid://drkp23drkcrnb" path="res://audio/sfx-pipe.mp3" id="9_7owmg"]
[ext_resource type="AudioStream" uid="uid://qwtgq3se0dvo" path="res://audio/coin.mp3" id="10_eiyqk"]
[ext_resource type="AudioStream" uid="uid://uwpkam132gr5" path="res://audio/sfx-squish.mp3" id="11_73kkf"]
[ext_resource type="Texture2D" uid="uid://1eykuuinqsjs" path="res://characters/mario/playerpalette.png" id="11_n5sgd"]
[ext_resource type="AudioStream" uid="uid://dyb457fbs58qu" path="res://audio/sfx-life.mp3" id="12_n5sgd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6tgf"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73kkf"]
size = Vector2(12, 30)

[sub_resource type="Animation" id="Animation_n5sgd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cwche"]
resource_name = "climbBig"
length = 0.166675
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [23, 24]
}

[sub_resource type="Animation" id="Animation_spk56"]
resource_name = "climbSmall"
length = 0.166675
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="Animation" id="Animation_u2s01"]
resource_name = "crouch"
length = 0.016668335
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_yr3on"]
resource_name = "die"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_2ngu4"]
resource_name = "grow"
length = 1.3333417
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.3333333, 0.4166667, 0.5, 0.5833334, 0.6666666),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 15, 16, 0, 15, 16, 0, 15, 16]
}

[sub_resource type="Animation" id="Animation_n36er"]
resource_name = "idleBig"
length = 0.050005
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_5ki56"]
resource_name = "idleSmall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qc1tv"]
resource_name = "jumpBig"
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="Animation" id="Animation_1yk18"]
resource_name = "jumpSmall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_yv3je"]
resource_name = "shrink"
length = 1.3333417
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334, 0.4166667, 0.5, 0.5833333, 0.6666667, 0.75, 0.8333334, 0.9166667, 1, 1.0833333, 1.1666667, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 25, 26, 25, 26, 10, 26, 10, 26, 10, 9, 10, 9, 10, 9]
}

[sub_resource type="Animation" id="Animation_yw3xw"]
resource_name = "swimBig"
length = 0.60000503
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35000002, 0.4, 0.45000002, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30, 25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_6gvyl"]
resource_name = "swimIdleBig"
length = 0.20001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [25, 26]
}

[sub_resource type="Animation" id="Animation_b4o2o"]
resource_name = "swimIdleSmall"
length = 0.20001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}

[sub_resource type="Animation" id="Animation_jv5ih"]
resource_name = "swimSmall"
length = 0.60000503
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35000002, 0.4, 0.45000002, 0.5, 0.5491456),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_xe83n"]
resource_name = "throwBig"
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [31]
}

[sub_resource type="Animation" id="Animation_3hm5d"]
resource_name = "turnBig"
length = 0.083341666
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_ogpgs"]
resource_name = "turnSmall"
length = 0.06667334
loop_mode = 1
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_d745t"]
resource_name = "walkBig"
length = 0.20000668
loop_mode = 1
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [17, 18, 19]
}

[sub_resource type="Animation" id="Animation_saib0"]
resource_name = "walkSmall"
length = 0.20000668
loop_mode = 1
step = 0.06666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ogpgs"]
_data = {
&"RESET": SubResource("Animation_n5sgd"),
&"climbBig": SubResource("Animation_cwche"),
&"climbSmall": SubResource("Animation_spk56"),
&"crouch": SubResource("Animation_u2s01"),
&"die": SubResource("Animation_yr3on"),
&"grow": SubResource("Animation_2ngu4"),
&"idleBig": SubResource("Animation_n36er"),
&"idleSmall": SubResource("Animation_5ki56"),
&"jumpBig": SubResource("Animation_qc1tv"),
&"jumpSmall": SubResource("Animation_1yk18"),
&"shrink": SubResource("Animation_yv3je"),
&"swimBig": SubResource("Animation_yw3xw"),
&"swimIdleBig": SubResource("Animation_6gvyl"),
&"swimIdleSmall": SubResource("Animation_b4o2o"),
&"swimSmall": SubResource("Animation_jv5ih"),
&"throwBig": SubResource("Animation_xe83n"),
&"turnBig": SubResource("Animation_3hm5d"),
&"turnSmall": SubResource("Animation_ogpgs"),
&"walkBig": SubResource("Animation_d745t"),
&"walkSmall": SubResource("Animation_saib0")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_76esm"]
shader = ExtResource("2_4gsdp")
shader_parameter/palette = ExtResource("11_n5sgd")
shader_parameter/accessRow = 1

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 2147483649
collision_priority = 0.1
floor_constant_speed = true
platform_floor_layers = 2147483649
script = ExtResource("1_wrvex")
metadata/canPipe = false
metadata/pipeDirection = 0

[node name="ColDown" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_b6tgf")

[node name="ColUp" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource("RectangleShape2D_73kkf")

[node name="DeadMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_7m202")

[node name="SmallJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5ayx0")

[node name="BigJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_752v2")

[node name="Powerup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_gt6pp")

[node name="Hurt&Pipe" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_7owmg")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CoinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_eiyqk")

[node name="SwimSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_73kkf")

[node name="Life" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_n5sgd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ogpgs")
}
autoplay = "idleSmall"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_76esm")
texture = ExtResource("2_4ckko")
hframes = 16
vframes = 2

[connection signal="goal_pole" from="." to="." method="_on_goal_pole"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
